--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,9 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/Nashville project 1.jpg') no-repeat top center ;
+  background: url('images/Code project 1.jpg') no-repeat top center ;
   background-size: cover;
+  background-position: bottom
   overflow: hidden;
   padding-top: 60px;
 }
